# auxlee-monorepo

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  UPDATE_NOTES.md  build-plugin.sh  start-backend.sh
backend/: .gitignore  auxlee-backend.service  config.py  gunicorn_config.py  main.py  requirements.txt
plugin/: CMakeLists.txt
plugin/Source/: AudioStreamer.cpp  AudioStreamer.h  NetworkClient.cpp  NetworkClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
testProject.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
testProject.band/Resources/: ProjectInformation.plist
